# german-day-ahead-forecast

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml  requirements.txt  smard_merged_15min_head.csv
.streamlit/: config.toml
backtest_results/: ablation_summary.csv  battery_pnl_daily.csv  drift_log.csv  lstm_weather_step7.csv  price_quantile_holdout.csv
dashboards/: app.py  charts.py  styles.py
notebooks/: 01_backtest_visualization.ipynb  02_feature_pipeline_visualization.ipynb  03_baselines_visualization.ipynb  08_feature_ablation.ipynb
scripts/: ablation.py  audit_price_data.py  backtest_price_quantile.py  build_m3_notebook.py  build_m4_attention_notebook.py  build_m4_explained_notebook.py  build_m4pt3_ablation_notebook.py  build_m5_weather_notebook.py  build_m6_quantile_notebook.py  build_price_notebook.py  calibrate_extreme_clip.py  check_resolution.py  compare_downloadcenter_vs_csv.py  diagnose_tomorrow_band.py  discover_smard_filters.py  drift_check.py  drift_monitor.py  energy_charts_endpoints.py  energy_charts_probe.py  inspect_holidays.py  inspect_negative_prices.py  probe_forecast_filters.py  probe_open_meteo.py  probe_smard_downloadcenter.py  probe_smard_focused.py  probe_smard_region_de.py  quantile_holdout_coverage.py  render_tomorrow.py  render_tomorrow_price.py  review_nb06.py  run_battery_pnl.py  sample_smard_filter.py  smoke_csv_source.py  smoke_open_meteo.py  smoke_price_window.py  smoke_refresh.py  smoke_sarimax.py  smoke_smard_downloadcenter.py  smoke_tomorrow_predict.py  smoke_train_lstm.py  (+7 more)
tests/: test_api.py  test_smoke.py  (+6 more)
(+55 files in other folders)
